--- a/wwwroot/firsttetrisever.html
+++ b/wwwroot/firsttetrisever.html
@@ -1,22 +1,17 @@
 ﻿<!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="css/firsttetris.css">
+		<link rel="stylesheet" type="text/css" href="css/tetris.css">
 		<title>ТЕТРИС</title>
 	</head>
 	<body>
-		<div id="game">
+		<div id="container">
 			<canvas id="screen" width="592" height="384"></canvas>
-		</div>
-		<div id="share">
-			Share on: 
-			<a id="share-twitter" target="blank" href="http://twitter.com/share?url=http://tetromini.org">Twitter</a> &bull;
-			<a id="share-facebook" target="blank" href="http://www.facebook.com/sharer.php?p[url]=http://tetromini.org">Facebook</a> &bull;
-			<a id="share-blogger" target="blank" href="https://www.blogger.com/blog-this.g?t=http://tetromini.org">Blogger</a>
-			&nbsp;~&nbsp;
-			Play:
-			<a href="tetromini.html">Tetromini</a> &bull;
-			<a href="dostetris.html">DOS Tetris</a> 
+			<div id="footer">
+				Play:
+				<a href="tetromini.html">Tetromini</a> &bull;
+				<a href="dostetris.html">DOS Tetris</a>
+			</div>
 		</div>
         <script src="js/jquery.min.js" type="text/javascript"></script>
         <script src="js/mscorlib.min.js" type="text/javascript"></script>
