--- a/wwwroot/tetromini.html
+++ b/wwwroot/tetromini.html
@@ -1,31 +1,27 @@
 ﻿<!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="css/tetromini.css">
+		<link rel="stylesheet" type="text/css" href="css/tetris.css">
+		<link rel="stylesheet" type="text/css" href="css/mini.css">
 		<title>Play TETROMINI !</title>
 	</head>
 	<body>
-		<div id="score-bar">
-			Score: <span id="score">0</span> &nbsp; Level: <span id="level">0</span> &nbsp; Full lines: <span id="lines">0</span>
-		</div>
-		<div id="game">
+		<div id="container">
+			<div id="header">
+				Score: <span id="score">0</span> &bull; Level: <span id="level">0</span> &bull; Full lines: <span id="lines">0</span>
+			</div>
 			<canvas id="screen" width="10" height="20"></canvas>
+			<div id="footer">
+				Play:
+				<a href="dostetris.html">DOS Tetris</a> &bull;
+				<a href="firsttetrisever.html">First Tetris Ever</a>
+			</div>
 		</div>
-		<div id="share">
-			Share on: 
-			<a id="share-twitter" target="blank" href="http://twitter.com/share?url=http://tetromini.org">Twitter</a> &bull;
-			<a id="share-facebook" target="blank" href="http://www.facebook.com/sharer.php?p[url]=http://tetromini.org">Facebook</a> &bull;
-			<a id="share-blogger" target="blank" href="https://www.blogger.com/blog-this.g?t=http://tetromini.org">Blogger</a>
-			&nbsp;~&nbsp;
-			Play:
-			<a href="dostetris.html">DOS Tetris</a> &bull;
-			<a href="firsttetrisever.html">First Tetris Ever</a> 
-		</div>
-        <script src="js/jquery.min.js" type="text/javascript"></script>
-        <script src="js/mscorlib.min.js" type="text/javascript"></script>
-        <script src="js/JSTe3s.min.js" type="text/javascript"></script>
-        <script src="js/howler.min.js" type="text/javascript"></script>
-        <script src="js/tetromini.js" type="text/javascript"></script>
-        <script src="js/ga.js" type="text/javascript"></script>
+		<script src="js/jquery.min.js" type="text/javascript"></script>
+		<script src="js/mscorlib.min.js" type="text/javascript"></script>
+		<script src="js/JSTe3s.min.js" type="text/javascript"></script>
+		<script src="js/howler.min.js" type="text/javascript"></script>
+		<script src="js/tetromini.js" type="text/javascript"></script>
+		<script src="js/ga.js" type="text/javascript"></script>
 	</body>
 </html>
